[package]
name = "cosmwasm-vm-js-zk"
version = "0.0.1"
authors = ["Thanh tu <tu@orai.io>", "Duc Pham <duc@orai.io>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"

# zk import 
getrandom = { version = "0.2", features = ["js"] }
cosmwasm-crypto = { git = "https://github.com/oraichain/cosmwasm", branch = "multiwasm-zk", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
hex = "0.4"





