[package]
name = "ra-wasm"
version = "0.1.0"
authors = ["rust-analyzer developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = { version = "0.4.14", features = ["release_max_level_warn"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_repr = "0.1.8"
serde-wasm-bindgen = "0.4.3"
stacker = "0.1.14"
wasm-bindgen = "0.2.72"
wasm-bindgen-rayon = "1.0.3"
# rayon = "1.5.3"

ide = { version = "0.0.81", package = "ra_ap_ide" }
cfg = { version = "0.0.81", package = "ra_ap_cfg" }
ide_db = { version = "0.0.81", package = "ra_ap_ide_db" }
rust-pack = { path = "../rust-pack" }

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
