[package]
name = "ra-wasm"
version = "0.1.0"
authors = ["tu@orai.io"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4.14", features = ["release_max_level_warn"] }
# polyfill like node env
instant = { version = "0.1", features = ["wasm-bindgen"] }
console_error_panic_hook = { version = "0.1.7" }
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = "0.2.72"
wasm-bindgen-rayon = "1.0.3"

rust-pack = { path = "../rust-pack" }

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
