[package]
name = "rust-pack"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "rust-pack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
base_db = { package = "ra_ap_base_db", version = "0.0.91" }
cfg = { package = "ra_ap_cfg", version = "0.0.91" }
tt = { package = "ra_ap_tt", version = "0.0.91" }
ide = { package = "ra_ap_ide", path = "../ra-app-ide" }
ide_db = { package = "ra_ap_ide_db",version = "0.0.91" }
serde_repr = "0.1.8"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
clap = "2.33.3"

change-json = { path = "../change-json" }